<resources>
    <string name="a_new_way_to_use_your_phone">A new way to use your phone</string>
    <string name="about">About</string>
    <string name="about_pro_text">Get the Pro version to:\n    - Unlock a second edge\n    - Customize column count and row count of Grid favorites\n    - Unlock support for icon packs\n    - Pin shortcuts to Recent Apps\n    - Auto-disable Swiftly Switch in full screen apps</string>
    <string name="about_pro_version">About Pro version</string>
    <string name="access_your_favorite_app_and_system_setting_anywhere">Access your favorite shortcut anywhere</string>
    <string name="accessibility_service_description">Bind Accessibility Service permission is used to perform global back button action, recent apps button action, displaying power menu, and pull down notification center (in some devices). Swiftly Switch requires Observe Your Actions because it is required for Accessibility service, the app does not observe your actions outside of its context. </string>
    <string name="action_settings">Settings</string>
    <string name="actions">Actions</string>
    <string name="add_new">Add new</string>
    <string name="admin_desc">Required for lock screen action</string>
    <string name="admin_permission">Phone administrator permission</string>
    <string name="admin_permission_explain">Allow Swiftly Switch with admin permissions to enable the screen lock.</string>
    <string name="admin_permission_notice">Using this shortcut requires setting Swiftly Switch as an administrator. This means that the app CAN NOT be uninstalled unless you disable the permission first.</string>
    <string name="always_visible">Always visible</string>
    <string name="app_name">Swiftly Switch Pro</string>
    <string name="app_shortcut_contact">Apps, shortcuts, &#8230;</string>
    <string name="app_tab_fragment_ok_button">OK</string>
    <string name="apps">Apps</string>
    <string name="ask_for_write_setting_notification_text">Tap here and grant the \"Write settings\" for Swiftly Switch</string>
    <string name="ask_for_write_setting_notification_title">Swiftly Switch needs the \"Write settings\" permission</string>
    <string name="ask_user_to_turn_on_accessibility_toast">Please turn on the accessibility service for Swiftly Switch</string>
    <string name="assist_app_is_only_available_for_mashmallow_and_above">This feature is only available for Android 6.0 and above. For lower Android versions, you can enable/disable the edges from the persistent notification.</string>
    <string name="auto">Auto</string>
    <string name="avoid_keyboard">Avoid keyboard</string>
    <string name="avoid_keyboard_description">Prevent the app from interfering with the keyboard</string>
    <string name="avoid_keyboard_place_under">Place under keyboard</string>
    <string name="avoid_keyboard_step_aside">Step aside keyboard</string>
    <string name="backup">Backup</string>
    <string name="backup_and_restore">\"Backup, Import settings\"</string>
    <string name="backup_fail">Backup fail</string>
    <string name="backup_guide">The backup file will be stored in your Google Drive. Please connect to your Google account and then choose the folder to upload.</string>
    <string name="backup_successful">Backed up successfully</string>
    <string name="batterylife">Battery life:</string>
    <string name="brightness">Brightness</string>
    <string name="call">Call</string>
    <string name="can_not_delete">Can not delete</string>
    <string name="can_not_delete_cause_being_used_in">Can not delete, being used in:</string>
    <string name="can_not_delete_cause_this_is_the_only_one">Can not delete, this is the only one</string>
    <string name="choose">Choose</string>
    <string name="choose_action">Choose action</string>
    <string name="choose_recent_set">Choose Recent Set</string>
    <string name="choose_set">Set</string>
    <string name="choose_shortcut_actions_tab_title">Actions</string>
    <string name="choose_shortcut_apps_tab_title">Apps</string>
    <string name="choose_shortcuts_type">Choose shortcut type</string>
    <string name="circle_favorite_set">Circle Favorite set</string>
    <string name="circle_favorites">Circle favorites</string>
    <string name="circle_favorites_description">Place a small set of your favorite shortcuts in a semi-circle manner</string>
    <string name="columns_count">Columns count</string>
    <string name="connecting">Connecting</string>
    <string name="contact_type_custom">custom</string>
    <string name="contact_type_home">home</string>
    <string name="contact_type_home_fax">home fax</string>
    <string name="contact_type_main">main</string>
    <string name="contact_type_other">other</string>
    <string name="contact_type_pager">pager</string>
    <string name="contact_type_work">work</string>
    <string name="contact_type_work_fax">work fax</string>
    <string name="contacts">Contacts</string>
    <string name="current_set">Current set</string>
    <string name="default_action_for_contact">Default action for contacts</string>
    <string name="delete">Delete this</string>
    <string name="device_shortcuts">\"Device\'s shortcuts\"</string>
    <string name="disable_in_fullscreen">Disable in full screen apps (does not always work!)</string>
    <string name="disable_top_indicator">Disable top indicator</string>
    <string name="downloading">Downloading</string>
    <string name="easily_navigation">Easy navigation</string>
    <string name="edge_dialog_array_bottom_centre">Bottom centre</string>
    <string name="edge_dialog_array_left_bottom">Left bottom</string>
    <string name="edge_dialog_array_left_centre">Left centre</string>
    <string name="edge_dialog_array_left_top">Left top</string>
    <string name="edge_dialog_array_right_bottom">Right bottom</string>
    <string name="edge_dialog_array_right_centre">Right centre</string>
    <string name="edge_dialog_array_right_top">Right top</string>
    <string name="edge_dialog_cancel_button">Cancel</string>
    <string name="edge_dialog_default_button">Default</string>
    <string name="edge_dialog_mode_array_default">Default</string>
    <string name="edge_dialog_ok_button">OK</string>
    <string name="edge_dialog_set_circle_size_text">Circle size</string>
    <string name="edge_dialog_set_length_text">Length</string>
    <string name="edge_dialog_set_mode_text">Mode</string>
    <string name="edge_dialog_set_offset_text">Offset</string>
    <string name="edge_dialog_set_position_text">Position</string>
    <string name="edge_dialog_set_sensitive_text">Sensitivity</string>
    <string name="edge_gesture_notification_title">Recent App Switcher</string>
    <string name="edge_mode__circle_favorite_and_quick_actions">Circle Favorite and Quick Actions</string>
    <string name="edge_mode__grid_favorite">Grid Favorite</string>
    <string name="edge_mode__recent_and_quick_actions">Recent apps and Quick Actions</string>
    <string name="email_prompt">Please fill out appropriate information!\n\n        Bug report:\n\n        Suggestion:\n\n        Question:\n\n        Additional information:\n\n</string>
    <string name="email_us">Email us</string>
    <string name="empty">Empty</string>
    <string name="enable">Enable</string>
    <string name="enable_accessibility">Enable Bind Accessibility Service (optional)</string>
    <string name="enable_accessibility_permission">Enable Bind Accessibility Service permission</string>
    <string name="enable_assist_app">Enable assistant app</string>
    <string name="enable_floating_window">Enable Floating Window</string>
    <string name="enable_long_press_to_toggle_swiftly_switch">By setting Swiftly Switch as your assistant app (instead of Google Now on Tap), you can enable/disable trigger edges at any time by long-pressing the home button.</string>
    <string name="enable_usage_stat">Enable Usage Statistics (optional)</string>
    <string name="need_usage_access_title">Need Usage Access permission</string>
    <string name="need_usage_access">Usage Access permission is needed to perform this action.</string>
    <string name="faq_app_take_few_seconds_to_launch">Lag when launching apps from the home screen</string>
    <string name="faq_app_take_few_seconds_to_launch_answer">Swiftly Switch can\'t start apps within 5 seconds from the moment you return to the Home screen. This is the how Android limit services. It\'s not a problem if you return home using the in-app Home shortcut.</string>
    <string name="faq_can_not_uninstall">Why I can\'t uninstall the app on my device?</string>
    <string name="faq_can_not_uninstall_answer">You can uninstall the app as other applications. If you have set the app to \"Device administrator\" (for the screen lock shortcut), you\'ll need to disable it first: Settings > Security > Device administrators > disable the option for Swiftly Switch.</string>
    <string name="faq_closed_app_in_recent_list">Closed apps do not disappear from recent apps list</string>
    <string name="faq_closed_app_in_recent_list_answer">Due to a limitation from Android 5.0, 3rd-party apps can only access the list of your recently used apps but not the list of currently running apps on your device.</string>
    <string name="faq_how_to_auto_disable_when_play_game">How to automatically disable the app when playing games?</string>
    <string name="faq_how_to_auto_disable_when_play_game_answer">Go to \"More settings\" and turn on \"Disable in full screen apps\" or \"Disable in landscape mode\"</string>
    <string name="faq_how_to_hide_the_notification">How to hide the notification?</string>
    <string name="feel">Feel</string>
    <string name="general">General</string>
    <string name="grid_favorites">Grid Favorites</string>
    <string name="grid_favorites_description">\"Place a large set of your favorite shortcuts here. Tap to set size, content and position\"</string>
    <string name="look">Look</string>
    <string name="main_disable_clock_text">Disable clock</string>
    <string name="main_disable_in_landscape">Disable in landscape mode</string>
    <string name="main_enable_disable_by_long_press_home_button">Enable/disable edges by long-pressing home button</string>
    <string name="main_exclude_app_info">Set apps that will not be listed in the recent list</string>
    <string name="main_exclude_app_title">Blacklist</string>
    <string name="main_haptic_feedback_on_move_to_item">Haptic feedback on icons</string>
    <string name="main_haptic_feedback_on_trigger_text">Haptic feedback on trigger</string>
    <string name="main_outer_ring_setting">Quick actions</string>
    <string name="permission_used_for_back_button_notification_power_menu">Permission used for back button, notification and power menu</string>
    <string name="permission_used_for_getting_recent_apps">Permission used for getting recent apps</string>
    <string name="permission_used_for_showing_icons_over_other_apps">Permission used for showing icons over other apps</string>
    <string name="quick_actions_description">Quick Actions are placed outside of the Recent App, tap to customize or add new</string>
    <string name="recent_app">Recent app</string>
    <string name="recent_apps_description">Tap to customize or add new Recent Set</string>
    <string name="set_required_permissions">Set permissions</string>
    <string name="checkout_new_app">Checkout our new app</string>
    <string name="checkout_journal_it_text">After 10 months of development, we proud to announce Journal it!, a journal/diary app that makes journaling on mobile easy and delightful. If you love Swiftly Switch, you probably gonna love Journal it! too!</string>
    <string name="checkout_journal_it_button">Checkout Journal it!</string>
    <string name="dismiss">Dismiss</string>
</resources>