<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_4"
    android:gravity="center"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_required_permissions"
        android:textSize="34dp"
        android:fontFamily="sans-serif-bolt"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="48dp"
        />
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:id="@+id/ask_permission_1_linear_layout"
        android:background="@drawable/set_permission_ask_background"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enable_floating_window"
            android:textSize="20dp"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done_black_24dp"
            android:tint="@color/blue"
            />

    </LinearLayout>
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:text="@string/permission_used_for_showing_icons_over_other_apps"
        />



    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:id="@+id/ask_permission_2_linear_layout"
        android:background="@drawable/set_permission_ask_background"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enable_usage_stat"
            android:textSize="20dp"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done_black_24dp"
            android:tint="@color/blue"
            />

    </LinearLayout>
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:text="@string/permission_used_for_getting_recent_apps"
        />




    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:id="@+id/ask_permission_3_linear_layout"
        android:background="@drawable/set_permission_ask_background"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enable_accessibility"
            android:textSize="20dp"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done_black_24dp"
            android:tint="@color/blue"
            />

    </LinearLayout>
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/permission_used_for_back_button_notification_power_menu"
        />



</LinearLayout>