<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_lightish"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/background_light"
            android:elevation="8dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general"
                style="@style/Text_Header"
                />

            <LinearLayout
                style="@style/MoreSetting_Item_Parent_With_Switch"
                >
                <TextView
                    style="@style/MoreSetting_Item_Text_Primary"
                    android:text="@string/main_disable_clock_text"
                    />
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/avoid_keyboard_switch"
                    style="@style/MoreSetting_Item_Switch"
                    />
            </LinearLayout>
            <include layout="@layout/separator" />

            <LinearLayout
                style="@style/MoreSetting_Item_Parent_With_Switch"
                >
                <TextView
                    style="@style/MoreSetting_Item_Text_Primary"
                    android:text="@string/avoid_keyboard"
                    />
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/disable_clock_switch"
                    style="@style/MoreSetting_Item_Switch"
                    />
            </LinearLayout>
            <include layout="@layout/separator" />

            <LinearLayout
                style="@style/MoreSetting_Item_Parent_With_Switch"
                >
                <TextView
                    style="@style/MoreSetting_Item_Text_Primary"
                    android:text="@string/main_disable_in_landscape"
                    />
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/disable_in_landscape_switch"
                    style="@style/MoreSetting_Item_Switch"
                    />
            </LinearLayout>
            <include layout="@layout/separator" />

            <LinearLayout
                style="@style/MoreSetting_Item_Parent_With_Switch"
                >
                <TextView
                    style="@style/MoreSetting_Item_Text_Primary"
                    android:text="@string/main_enable_disable_by_long_press_home_button"
                    />
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/use_home_button_switch"
                    style="@style/MoreSetting_Item_Switch"
                    />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/background_light"
            android:elevation="8dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/look"
                style="@style/Text_Header"
                />

            <LinearLayout
                style="@style/MoreSetting_Item_Parent_No_Switch"
                >
                <TextView
                    style="@style/MoreSetting_Item_Text_Primary.NoSwitch"
                    android:text="@string/main_disable_clock_text"
                    />
                <TextView
                    style="@style/MoreSetting_Item_Text_Secondary"
                    tools:text="System"

                    />

            </LinearLayout>
            <include layout="@layout/separator" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/background_light"
            android:elevation="8dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feel"
                style="@style/Text_Header"
                />

            <LinearLayout
                style="@style/MoreSetting_Item_Parent_With_Switch"
                >
                <TextView
                    style="@style/MoreSetting_Item_Text_Primary"
                    android:text="@string/main_haptic_feedback_on_trigger_text"
                    />
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/haptic_feedback_on_trigger_switch"
                    style="@style/MoreSetting_Item_Switch"
                    />
            </LinearLayout>

            <include layout="@layout/separator" />
            <LinearLayout
                style="@style/MoreSetting_Item_Parent_With_Switch"
                >
                <TextView
                    style="@style/MoreSetting_Item_Text_Primary"
                    android:text="@string/main_haptic_feedback_on_move_to_item"
                    />
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/haptic_feedback_on_icon_switch"
                    style="@style/MoreSetting_Item_Switch"
                    />
            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/background_light"
            android:elevation="8dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/backup_and_restore"
                style="@style/Text_Header"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_outer_ring_setting"
                    style="@style/Main_text_primary"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quick_actions_description"
                    style="@style/Main_text_secondary"
                    />

            </LinearLayout>
        </LinearLayout>



    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
